[package]
name = "rustkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
easy-repl = "0.2.1"
regex = "1.9.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
zookeeper = "0.8.0"
